...

const selectionOptions = [
  {
    name: 'My Profile',
    icon: 'person',
    route: 'myProfile',
    testID: 'myProfileButton',
  },

  {
    name: 'My Chats',
    icon: 'chat',
    route: 'usersList',
...
        );
      },
    });
  }, []);

  return (
    <View style={styles.screen} testID="dashboardView">
      <View style={styles.infoContainer}>
        {selectionOptions.map(option => (
          <TouchableOpacity
            key={option.route}
            testID={option.testID}
            style={styles.optionsContainer}
...
