...
  ) : (
    <KeyboardAvoidingView
      behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
      style={styles.container}>
      <TouchableWithoutFeedback
        onPress={() => Keyboard.dismiss()}
        testID="loginView">
        <View style={styles.screen}>
          <Input
            testID={TestIds.login.emailInput}
            style={styles.input}
            container={{marginTop: 60}}
            control={control}
...
